new data version, tram and train. WIP on sorting out Station Availability when multi-mode interchanges/links are in play